Made the suggestion circles better

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
         </div>
         <main class="suggestion-apps">
           <aside class="top-row">
-            <div class="suggestion-circle"> </div>
-            <div class="suggestion-circle"> </div>
-            <div class="suggestion-circle"> </div>
-            <div class="suggestion-circle"> </div>
+            <div class="suggestion-circle-container"><img class="suggestion-circle" src="./imgs/placeholder-square.jpg" alt="just a place holder"><p>Place Holder</p></div>
+            <div class="suggestion-circle-container"><img class="suggestion-circle" src="./imgs/placeholder-square.jpg" alt="just a place holder"><p>Place Holder</p></div>
+            <div class="suggestion-circle-container"><img class="suggestion-circle" src="./imgs/placeholder-square.jpg" alt="just a place holder"><p>Place Holder</p></div>
+            <div class="suggestion-circle-container"><img class="suggestion-circle" src="./imgs/placeholder-square.jpg" alt="just a place holder"><p>Place Holder</p></div>
           </aside>
           <aside class="bottom-row">
-            <div class="suggestion-circle"> </div>
-            <div class="suggestion-circle"> </div>
-            <div class="suggestion-circle"> </div>
+            <div class="suggestion-circle-container"><img class="suggestion-circle" src="./imgs/placeholder-square.jpg" alt="just a place holder"><p>Place Holder</p></div>
+            <div class="suggestion-circle-container"><img class="suggestion-circle" src="./imgs/placeholder-square.jpg" alt="just a place holder"><p>Place Holder</p></div>
+            <div class="suggestion-circle-container"><img class="suggestion-circle" src="./imgs/placeholder-square.jpg" alt="just a place holder"><p>Place Holder</p></div>
           </aside>
         </main>
         <footer>
